@@ -6,6 +6,7 @@ compiz (1:0.9.12.2+16.04.20160526-0ubuntu2) UNRELEASED; urgency=medium
 
   [ Marco Trevisan (Treviño) ]
   * debian: add unity-lowgfx profile to compizconfig (LP: #1598770)
+  * Composite: use C++ goodness for managing damaging rectangles
 
  -- Eleni Maria Stea <elenimaria.stea@canonical.com>  Tue, 05 Jul 2016 12:29:58 +0200
 
